--- a/node_server/public/web/views/explore.pug
+++ b/node_server/public/web/views/explore.pug
@@ -9,6 +9,9 @@ block content
   - var buttonText            = 'Create ' + targetUsersText + ' Links';
 
   //this should be dynaically created one day from 'worlds' folders ...
+  - const orbits_worlds          = [ 'Orbits'];
+  - const orbits_worlds_txt      = [ 'Orbits'];
+
   - const wit_worlds          = [ 'hub', 'WIT_1_Kitchen', 'WIT_2_Lab', 'WIT_3_Work'];
   - const wit_worlds_txt      = [ 'Campfire Hub', 'Growing Up', 'In The Classroom', 'On The Job'];
 
@@ -29,6 +32,12 @@ block content
 
   h2 Circles' Worlds
   div(class="gutter-bottom-doubled")
+
+    div(class="pure-menu gutter-bottom")
+    <span class="pure-menu-heading">Orbits</span>
+      ul(class="pure-menu-list")
+        each val, index in orbits_worlds
+          li!= '<a class="pure-button" href="' + '/w/' + orbits_worlds[index] + '">' + orbits_worlds_txt[index] + '</a>'
 
     div(class="pure-menu gutter-bottom")
     <span class="pure-menu-heading">Challenges Surrounding Women in the Trades</span>
