models with new textures

--- a/node_server/public/web/views/explore.pug
+++ b/node_server/public/web/views/explore.pug
@@ -9,8 +9,8 @@ block content
   - var buttonText            = 'Create ' + targetUsersText + ' Links';
 
   //this should be dynaically created one day from 'worlds' folders ...
-  - const orbits_worlds          = [ 'Orbits'];
-  - const orbits_worlds_txt      = [ 'Orbits'];
+  - const orbits_worlds          = [ 'Orbits', 'Outside'];
+  - const orbits_worlds_txt      = [ 'Orbits', 'Outside'];
 
   - const wit_worlds          = [ 'hub', 'WIT_1_Kitchen', 'WIT_2_Lab', 'WIT_3_Work'];
   - const wit_worlds_txt      = [ 'Campfire Hub', 'Growing Up', 'In The Classroom', 'On The Job'];
